KIBON-1763: update surfire plugin for juni5 compability, lint