@@ -924,11 +924,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
+                <version>3.0.0-M3</version>
                 <configuration>
                     <redirectTestOutputToFile>false</redirectTestOutputToFile>
                     <!--port offset fuer embedded wildfly -->
-                    <argLine>-Djboss.socket.binding.port-offset=10000 --illegal-access=permit</argLine>
+                    <argLine>-Djboss.socket.binding.port-offset=10000</argLine>
                     <environmentVariables>
                         <!--suppress UnresolvedMavenProperty -->
                         <JBOSS_HOME>${jbossHome}</JBOSS_HOME>
